crates/strz-grammar/grammar.js
    source_file: ($) => repeat($._source_item),

    // The DSL accepts line comments and C-style block comments. Hash comments are
    // only treated as comments when followed by whitespace so color values such as
    // `#ffffff` remain available to styles.
    identifier: (_) => /[A-Za-z_][A-Za-z0-9_.-]*/,

    _assignment_identifier: ($) =>
      prec(
        1,
        choice(
          $.identifier,
          alias("group", $.identifier),
          alias("person", $.identifier),
          alias("softwareSystem", $.identifier),
          alias("softwaresystem", $.identifier),
          alias("container", $.identifier),
          alias("component", $.identifier),
          alias("deploymentEnvironment", $.identifier),
          alias("deploymentGroup", $.identifier),
          alias("deploymentNode", $.identifier),
          alias("infrastructureNode", $.identifier),
          alias("containerInstance", $.identifier),
          alias("softwareSystemInstance", $.identifier),
        ),
      ),

    number: (_) => /\d+/,

    filter_mode: (_) => token(prec(2, choice(...FILTER_MODES))),

    bare_value: (_) => /[^\s{}"]+/,

    string: (_) =>
      token(
        seq(
          '"',
          repeat(choice(/[^"\\\n]+/, /\\./, seq("\\", /\r?\n/, /[ \t]*/))),
          '"',
        ),
      ),

    text_block_string: (_) =>
      token(seq('"""', repeat(choice(/[^"]+/, /"[^"]/, /""[^"]/)), '"""')),

    _value: ($) => choice($.string, $.identifier),

    _metadata_value: ($) => $.string,

    _tag_value: ($) => choice($.string, $.identifier),

    _relationship_tag_value: ($) =>
      choice($.string, alias(choice("Current", "Future"), $.identifier)),

    _directive_value: ($) =>
      choice($.string, $.text_block_string, $.bare_value, $.identifier),

    // Documentation importers and ADR importer selectors are identifier-shaped
    // values in the DSL: either a built-in token such as `adrtools` or a fully
    // qualified Java class name. Keeping them separate from `_directive_value`
    // preserves flexible path parsing without treating hyphenated bare values
    // such as `adr-tools` as first-class supported importer syntax.
    _source_item: ($) =>
      choice(
        $._definition,
        $._source_model_fragment_item,
        $._source_software_system_fragment_item,
        $._source_style_fragment_item,
      ),

    workspace: ($) =>
      choice(
        seq("workspace", field("body", $.workspace_block)),
        seq(
          "workspace",
          field("name", $._value),
          field("body", $.workspace_block),
        ),
        seq(
          "workspace",
          field("name", $._value),
          field("description", $._value),
          field("body", $.workspace_block),
        ),
        seq(
          "workspace",
          "extends",
          field("base", $._value),
          field("body", $.workspace_block),
        ),
      ),

    // The spec organizes content into `model`, `views`, and optional supporting
    // directives/configuration, so the workspace block keeps those concerns separate.
    workspace_block: ($) =>
      seq(
        "{",
        repeat(
          choice(
            $.include_directive,
            $.const_directive,
            $.constant_directive,
            $.var_directive,
            $.identifiers_directive,
            $.implied_relationships_directive,
            $.docs_directive,
            $.adrs_directive,
            $.name_statement,
            $.description_statement,
            $.properties_block,
            $.model,
            $.views,
            $.configuration,
          ),
        ),
        "}",
      ),

    // The model section is where people, systems, containers, components,
    // relationships, and custom/archetyped elements are declared.
    model: ($) => seq("model", field("body", $.model_block)),

    model_block: ($) => seq("{", repeat($._model_item), "}"),

    views: ($) => seq("views", field("body", $.views_block)),

    views_block: ($) => seq("{", repeat($._view_item), "}"),

    description_statement: ($) => seq("description", field("value", $._value)),

    title_statement: ($) => seq("title", field("value", $._value)),

    _model_item: ($) =>
      choice(
        $.archetypes,
        $.enterprise,
        $.group,
        $.person,
        $.software_system,
        $.custom_element,
        $.archetype_instance,
        $.deployment_environment,
        $.include_directive,
        $.const_directive,
        $.constant_directive,
        $.var_directive,
        $.elements_directive,
        $.relationships_directive,
        $.element_directive,
        $.identifiers_directive,
        $.implied_relationships_directive,
        $.properties_block,
        $.relationship,
      ),

    _software_system_item: ($) =>
      choice(
        $.group,
        $.container,
        $.custom_element,
        $.archetype_instance,
        $.include_directive,
        $.deployment_environment,
        $.elements_directive,
        $.relationships_directive,
        $.element_directive,
        $.relationship,
        $.docs_directive,
        $.adrs_directive,
        $.description_statement,
        $.tag_statement,
        $.tags_statement,
        $.metadata_statement,
        $.url_statement,
        $.properties_block,
        $.perspectives_block,
      ),

    person: ($) =>
      seq(
        optional(seq(field("identifier", $._assignment_identifier), "=")),
        choice(
          seq("person", field("name", $._value)),
          seq(
            "person",
            field("name", $._value),
            field("description", $._metadata_value),
          ),
          seq(
            "person",
            field("name", $._value),
            field("description", $._metadata_value),
            field("tags", $._tag_value),
          ),
          seq("person", field("name", $._value), field("body", $.person_block)),
          seq(
            "person",
            field("name", $._value),
            field("description", $._metadata_value),
            field("body", $.person_block),
          ),
          seq(
            "person",
            field("name", $._value),
            field("description", $._metadata_value),
            field("tags", $._tag_value),
            field("body", $.person_block),
          ),
        ),
      ),

    software_system: ($) =>
      seq(
        optional(seq(field("identifier", $._assignment_identifier), "=")),
        choice(
          seq(
            choice("softwareSystem", "softwaresystem"),
            field("name", $._value),
          ),
          seq(
            choice("softwareSystem", "softwaresystem"),
            field("name", $._value),
            field("description", $._metadata_value),
          ),
          seq(
            choice("softwareSystem", "softwaresystem"),
            field("name", $._value),
            field("description", $._metadata_value),
            field("tags", $._tag_value),
          ),
          seq(
            choice("softwareSystem", "softwaresystem"),
            field("name", $._value),
            field("body", $.software_system_block),
          ),
          seq(
            choice("softwareSystem", "softwaresystem"),
            field("name", $._value),
            field("description", $._metadata_value),
            field("body", $.software_system_block),
          ),
          seq(
            choice("softwareSystem", "softwaresystem"),
            field("name", $._value),
            field("description", $._metadata_value),
            field("tags", $._tag_value),
            field("body", $.software_system_block),
          ),
        ),
      ),

    software_system_block: ($) =>
      seq("{", repeat($._software_system_item), "}"),

    container: ($) =>
      seq(
        optional(seq(field("identifier", $._assignment_identifier), "=")),
        choice(
          seq("container", field("name", $._value)),
          seq(
            "container",
            field("name", $._value),
            field("description", $._metadata_value),
          ),
          seq(
            "container",
            field("name", $._value),
            field("description", $._metadata_value),
            field("technology", $._metadata_value),
          ),
          seq(
            "container",
            field("name", $._value),
            field("description", $._metadata_value),
            field("technology", $._metadata_value),
            field("tags", $._tag_value),
          ),
          seq(
            "container",
            field("name", $._value),
            field("body", $.container_block),
          ),
          seq(
            "container",
            field("name", $._value),
            field("description", $._metadata_value),
            field("body", $.container_block),
          ),
          seq(
            "container",
            field("name", $._value),
            field("description", $._metadata_value),
            field("technology", $._metadata_value),
            field("body", $.container_block),
          ),
          seq(
            "container",
            field("name", $._value),
            field("description", $._metadata_value),
            field("technology", $._metadata_value),
            field("tags", $._tag_value),
            field("body", $.container_block),
          ),
        ),
      ),

    relationship: ($) =>
      prec.right(
        choice(
          seq(
            optional(seq(field("identifier", $._assignment_identifier), "=")),
            field("source", $._relationship_endpoint),
            field("operator", $.relationship_operator),
            field("destination", $._relationship_endpoint),
            optional(field("body", $.relationship_block)),
          ),
          seq(
            optional(seq(field("identifier", $._assignment_identifier), "=")),
            field("source", $._relationship_endpoint),
            field("operator", $.relationship_operator),
            field("destination", $._relationship_endpoint),
            field("attribute", $._metadata_value),
            optional(field("body", $.relationship_block)),
          ),
          seq(
            optional(seq(field("identifier", $._assignment_identifier), "=")),
            field("source", $._relationship_endpoint),
            field("operator", $.relationship_operator),
            field("destination", $._relationship_endpoint),
            field("attribute", $._metadata_value),
            field("attribute", $._metadata_value),
            optional(field("body", $.relationship_block)),
          ),
          seq(
            optional(seq(field("identifier", $._assignment_identifier), "=")),
            field("source", $._relationship_endpoint),
            field("operator", $.relationship_operator),
            field("destination", $._relationship_endpoint),
            field("attribute", $._metadata_value),
            field("attribute", $._metadata_value),
            field("attribute", $._relationship_tag_value),
            optional(field("body", $.relationship_block)),
          ),
          seq(
            optional(seq(field("identifier", $._assignment_identifier), "=")),
            field("operator", $.relationship_operator),
            field("destination", $._relationship_endpoint),
            optional(field("body", $.relationship_block)),
          ),
          seq(
            optional(seq(field("identifier", $._assignment_identifier), "=")),
            field("operator", $.relationship_operator),
            field("destination", $._relationship_endpoint),
            field("attribute", $._metadata_value),
            optional(field("body", $.relationship_block)),
          ),
          seq(
            optional(seq(field("identifier", $._assignment_identifier), "=")),
            field("operator", $.relationship_operator),
            field("destination", $._relationship_endpoint),
            field("attribute", $._metadata_value),
            field("attribute", $._metadata_value),
            optional(field("body", $.relationship_block)),
          ),
          seq(
            optional(seq(field("identifier", $._assignment_identifier), "=")),
            field("operator", $.relationship_operator),
            field("destination", $._relationship_endpoint),
            field("attribute", $._metadata_value),
            field("attribute", $._metadata_value),
            field("attribute", $._relationship_tag_value),
            optional(field("body", $.relationship_block)),
          ),
        ),
      ),

    _relationship_endpoint: ($) => choice($.identifier, $.this_keyword),

    relationship_operator: ($) =>
      choice(
        "->",
        "-/>",
        seq("--", field("archetype", $.relationship_archetype_name), "->"),
      ),

    _view_item: ($) =>
      choice(
        $.include_directive,
        $.system_landscape_view,
        $.system_context_view,
        $.container_view,
        $.component_view,
        $.filtered_view,
        $.dynamic_view,
        $.deployment_view,
        $.custom_view,
        $.image_view,
        $.branding,
        $.terminology,
        $.properties_block,
        $.const_directive,
        $.constant_directive,
        $.var_directive,
        $.styles,
        $.theme_statement,
        $.themes_statement,
      ),

    _view_value: ($) =>
      choice($.identifier, $.string, $.wildcard, $.bare_value),

    wildcard: (_) => choice("*", "*?"),

    layout_direction: (_) => choice("tb", "bt", "lr", "rl"),

    _static_view_statement: ($) =>
      choice(
        $.include_statement,
        $.exclude_statement,
        $.animation_statement,
        $.auto_layout_statement,
        $.properties_block,
        $.default_statement,
        $.title_statement,
        $.description_statement,
      ),

    _filtered_view_statement: ($) =>
      choice(
        $.properties_block,
        $.default_statement,
        $.title_statement,
        $.description_statement,
      ),

    _dynamic_view_statement: ($) =>
      choice(
        $.dynamic_relationship,
        $.dynamic_relationship_reference,
        $.dynamic_parallel_block,
        $.auto_layout_statement,
        $.properties_block,
        $.default_statement,
        $.title_statement,
        $.description_statement,
      ),

    include_statement: ($) =>
      seq("include", repeat1(field("value", $._view_value))),

    exclude_statement: ($) =>
      seq("exclude", repeat1(field("value", $._view_value))),

    auto_layout_statement: ($) =>
      choice(
        choice("autoLayout", "autolayout"),
        seq(
          choice("autoLayout", "autolayout"),
          field("direction", $.layout_direction),
        ),
        seq(
          choice("autoLayout", "autolayout"),
          field("direction", $.layout_direction),
          field("rank_separation", $.number),
        ),
        seq(
          choice("autoLayout", "autolayout"),
          field("direction", $.layout_direction),
          field("rank_separation", $.number),
          field("node_separation", $.number),
        ),
      ),

    default_statement: (_) => "default",

    animation_statement: ($) =>
      seq("animation", field("body", $.animation_block)),

    animation_block: ($) =>
      seq("{", repeat(field("value", $._animation_value)), "}"),

    _animation_value: ($) =>
      choice($.identifier, $.bare_value, $.wildcard, $.string),

    // These directives are intentionally modeled as lightweight syntactic forms.
    // They matter for editor tooling and fixture coverage even when downstream
    // consumers do not execute or resolve them.
    const_directive: ($) =>
      seq(
        "!const",
        field("name", $._directive_value),
        field("value", $._directive_value),
      ),

    system_landscape_view_block: ($) =>
      seq("{", repeat($._static_view_statement), "}"),

    dynamic_view_block: ($) => seq("{", repeat($._dynamic_view_statement), "}"),
