crates/strz-grammar/test/corpus/views.txt
==================
Core views
==================

workspace {
  model {
    system = softwareSystem "System" {
      api = container "API"
    }
  }

  views {
    systemLandscape "landscape" "Overview" {
      include *
      autoLayout lr 300 200
      title "Landscape"
    }

    systemContext system "system-context" "System context" {
      include *
      exclude api
      description "System context"
    }

    container system "container-view" {
      include *
      default
    }

    component api "component-view" {
      include *
      title "Components"
    }

    filtered "container-view" include "Element,Relationship" "filtered-view" {
      default
      title "Filtered"
    }
  }
}

---

(source_file
  (workspace
    (workspace_block
      (model
        (model_block
          (software_system
            (identifier)
            (string)
            (software_system_block
              (container
                (identifier)
                (string))))))
      (views
        (views_block
          (system_landscape_view
            (string)
            (string)
            (system_landscape_view_block
              (include_statement
                (wildcard))
              (auto_layout_statement
                (layout_direction)
                (number)
                (number))
              (title_statement
                (string))))
          (system_context_view
            (identifier)
            (string)
            (string)
            (system_context_view_block
              (include_statement
                (wildcard))
              (exclude_statement
                (identifier))
              (description_statement
                (string))))
          (container_view
            (identifier)
            (string)
            (container_view_block
              (include_statement
                (wildcard))
              (default_statement)))
          (component_view
            (identifier)
            (string)
            (component_view_block
              (include_statement
                (wildcard))
              (title_statement
                (string))))
           (filtered_view
             (string)
             (filter_mode)
             (string)
             (string)
             (filtered_view_block
               (default_statement)
               (title_statement
                 (string)))))))))

==========================
Lowercase upstream views
==========================

workspace {
  model {
    system = softwareSystem "System"
  }

  views {
    systemlandscape "landscape" {
      include *
      autoLayout
    }

    systemcontext system "context" {
      include *
      animation {
        system
      }
    }
  }
}

---

(source_file
  (workspace
    (workspace_block
      (model
        (model_block
          (software_system
            (identifier)
            (string))))
      (views
        (views_block
          (system_landscape_view
            (string)
            (system_landscape_view_block
              (include_statement
                (wildcard))
              (auto_layout_statement)))
          (system_context_view
            (identifier)
            (string)
            (system_context_view_block
              (include_statement
                (wildcard))
              (animation_statement
                (animation_block
                  (identifier))))))))))

======================
Static view animation
======================

workspace {
  model {
    a = softwareSystem "A"
    b = softwareSystem "B"
  }

  views {
    systemLandscape {
      include *
      animation {
        a
        a->
      }
    }
  }
}

---

(source_file
  (workspace
    (workspace_block
      (model
        (model_block
          (software_system
            (identifier)
            (string))
          (software_system
            (identifier)
            (string))))
      (views
        (views_block
          (system_landscape_view
            (system_landscape_view_block
              (include_statement
                (wildcard))
              (animation_statement
                (animation_block
                  (identifier)
                  (bare_value))))))))))

============================
Dynamic explicit references
============================

workspace {
  model {
    a = softwareSystem "A"
    b = softwareSystem "B"
    rel = a -> b "Async"
  }

  views {
    dynamic * {
      rel "Async"
    }
  }
}

---

(source_file
  (workspace
    (workspace_block
      (model
        (model_block
          (software_system
            (identifier)
            (string))
          (software_system
            (identifier)
            (string))
          (relationship
            (identifier)
            (identifier)
            (relationship_operator)
            (identifier)
            (string))))
      (views
        (views_block
          (dynamic_view
            (wildcard)
            (dynamic_view_block
              (dynamic_relationship_reference
                (identifier)
                (string)))))))))

==================
Text block values
==================

workspace {
  views {
    properties {
      "plantuml.url" "https://plantuml.com/plantuml"
    }

    !const SOURCE """
      class MyClass
      """

    image * "image" {
      plantuml """
        @startuml
        ${SOURCE}
        @enduml
      """
    }
  }
}

---

(source_file
  (workspace
    (workspace_block
      (views
        (views_block
          (properties_block
            (property_entry
              (string)
              (string)))
          (const_directive
            (identifier)
            (text_block_string))
          (image_view
            (wildcard)
            (string)
            (image_view_block
              (plantuml_source
                (text_block_string)))))))))

===========================
Image view local properties
===========================

workspace {
  views {
    image * "image" {
      properties {
        "plantuml.url" "https://plantuml.com/plantuml"
      }

      plantuml "diagram.puml"
    }
  }
}

---

(source_file
  (workspace
    (workspace_block
      (views
        (views_block
          (image_view
            (wildcard)
            (string)
            (image_view_block
              (properties_block
                (property_entry
                  (string)
                  (string)))
              (plantuml_source
                (string)))))))))

=====================
Inline filtered views
=====================

workspace {
  model {
    user = person "User"
    future = softwareSystem "Future System" "Desc" Future
    user -> future "Uses" "" Future
  }

  views {
    systemLandscape FullLandscape {
      include *
    }

    filtered FullLandscape exclude Future FutureLandscape "Future landscape"
  }
}

---

(source_file
  (workspace
    (workspace_block
      (model
        (model_block
          (person
            (identifier)
            (string))
          (software_system
            (identifier)
            (string)
            (string)
            (identifier))
          (relationship
            (identifier)
            (relationship_operator)
            (identifier)
            (string)
            (string)
            (identifier))))
      (views
        (views_block
          (system_landscape_view
            (identifier)
            (system_landscape_view_block
              (include_statement
                (wildcard))))
           (filtered_view
             (identifier)
             (filter_mode)
             (identifier)
             (identifier)
             (string)))))))
